fix issue where text covered homebutton

--- a/joindenmark/src/pages/categorypage/CategoryPage.css
+++ b/joindenmark/src/pages/categorypage/CategoryPage.css
@@ -1,3 +1,7 @@
+.CategoryPageContainer{
+    padding-bottom: 17vw;
+}
+
 .pagePicture{
     width: 100vw;
     height: 60vw;
